// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseButton executes callback 1`] = `
<button
  className="nHkJq"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`BaseButton executes callback 2`] = `
<button
  className="nHkJq"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 1`] = `
<button
  className="nHkJq"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 2`] = `
<button
  className="nHkJq"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the BaseButton matches the snapshot 1`] = `
<button
  className="nHkJq"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the IconButton matches the snapshot 1`] = `
<button
  className="nHkJq"
  type="button"
>
  <svg
    aria-hidden={true}
    className="yoast-svg-icon yoast-svg-icon-edit createSvgIconComponent__StyledSvg-sc-1h4gl3a-0 cPnaHk"
    fill="black"
    focusable="false"
    role="img"
    size="16px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M491 1536l91-91-235-235-91 91v107h128v128h107zm523-928q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zm-54-192l416 416-832 832h-416v-416zm683 96q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"
    />
  </svg>
</button>
`;

exports[`the IconButton with text matches the snapshot 1`] = `
<button
  className="nHkJq"
  type="button"
>
  <svg
    aria-hidden={true}
    className="yoast-svg-icon yoast-svg-icon-edit khhyWe createSvgIconComponent__StyledSvg-sc-1h4gl3a-0 cPnaHk"
    fill="black"
    focusable="false"
    role="img"
    size="16px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M491 1536l91-91-235-235-91 91v107h128v128h107zm523-928q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zm-54-192l416 416-832 832h-416v-416zm683 96q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"
    />
  </svg>
  Click
</button>
`;

exports[`the SnippetPreviewButton matches the snapshot 1`] = `
<button
  className="nHkJq"
  type="button"
>
  ButtonValue
</button>
`;
